atualização do notebook após módulo 4 do curso

--- a/web_app_CSA_pindorama.ipynb
+++ b/web_app_CSA_pindorama.ipynb
@@ -10,9 +10,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 1,
    "id": "ee8631c5-64e7-4c9d-bc48-22fb8cf378a1",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-05-16T21:53:25.111517Z",
+     "iopub.status.busy": "2021-05-16T21:53:25.111517Z",
+     "iopub.status.idle": "2021-05-16T21:53:27.820517Z",
+     "shell.execute_reply": "2021-05-16T21:53:27.819517Z",
+     "shell.execute_reply.started": "2021-05-16T21:53:25.111517Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -31,9 +39,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 2,
    "id": "3bf4885f-ee98-4e31-aabc-7a0e12386175",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-05-16T21:53:27.821517Z",
+     "iopub.status.busy": "2021-05-16T21:53:27.821517Z",
+     "iopub.status.idle": "2021-05-16T21:53:27.836517Z",
+     "shell.execute_reply": "2021-05-16T21:53:27.835517Z",
+     "shell.execute_reply.started": "2021-05-16T21:53:27.821517Z"
+    }
+   },
    "outputs": [],
    "source": [
     "caminho = \"data/nutrients_csvfile.csv\"\n",
@@ -51,9 +67,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 3,
    "id": "62328afe-5399-4cae-87df-9694c69cf31c",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-05-16T21:53:27.838517Z",
+     "iopub.status.busy": "2021-05-16T21:53:27.838517Z",
+     "iopub.status.idle": "2021-05-16T21:53:27.863517Z",
+     "shell.execute_reply": "2021-05-16T21:53:27.862517Z",
+     "shell.execute_reply.started": "2021-05-16T21:53:27.838517Z"
+    }
+   },
    "outputs": [],
    "source": [
     "dados_nutricao[\"Protein\"] = dados_nutricao[\"Protein\"].replace(\"-1\",\"0\", regex=True)\n",
@@ -103,9 +127,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 4,
    "id": "4e3404f8-7930-47b9-a4da-8d7a9ba5d075",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-05-16T21:53:27.866517Z",
+     "iopub.status.busy": "2021-05-16T21:53:27.865517Z",
+     "iopub.status.idle": "2021-05-16T21:53:27.873517Z",
+     "shell.execute_reply": "2021-05-16T21:53:27.872517Z",
+     "shell.execute_reply.started": "2021-05-16T21:53:27.866517Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def grafico_comparativo(lista_alimentos, atributo):\n",
@@ -118,9 +150,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 5,
    "id": "68f321c3-9fd3-4c3e-b7e7-a7242194f145",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-05-16T21:53:27.875517Z",
+     "iopub.status.busy": "2021-05-16T21:53:27.874517Z",
+     "iopub.status.idle": "2021-05-16T21:53:28.045517Z",
+     "shell.execute_reply": "2021-05-16T21:53:28.044517Z",
+     "shell.execute_reply.started": "2021-05-16T21:53:27.875517Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -141,9 +181,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 6,
    "id": "26f984c6-8ec3-4c4b-a1c3-bfc42b981a4a",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-05-16T21:53:28.047517Z",
+     "iopub.status.busy": "2021-05-16T21:53:28.046517Z",
+     "iopub.status.idle": "2021-05-16T21:53:28.197517Z",
+     "shell.execute_reply": "2021-05-16T21:53:28.196517Z",
+     "shell.execute_reply.started": "2021-05-16T21:53:28.047517Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -161,24 +209,6 @@
    "source": [
     "grafico_comparativo([\"Milk skim\", \"Fortified milk\", \"Ice cream\"], \"Protein\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 307,
-   "id": "99cd14cb-35de-4a66-a565-eaead12d36f0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%run app.py"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "45e0542f-195b-4616-82f8-c824180d37aa",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
