atualizacao do nb com alguns ajustes testados para o app.py

--- a/web_app_CSA_pindorama.ipynb
+++ b/web_app_CSA_pindorama.ipynb
@@ -14,12 +14,13 @@
    "id": "ee8631c5-64e7-4c9d-bc48-22fb8cf378a1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-05-16T21:53:25.111517Z",
-     "iopub.status.busy": "2021-05-16T21:53:25.111517Z",
-     "iopub.status.idle": "2021-05-16T21:53:27.820517Z",
-     "shell.execute_reply": "2021-05-16T21:53:27.819517Z",
-     "shell.execute_reply.started": "2021-05-16T21:53:25.111517Z"
-    }
+     "iopub.execute_input": "2021-05-19T01:31:52.916913Z",
+     "iopub.status.busy": "2021-05-19T01:31:52.915913Z",
+     "iopub.status.idle": "2021-05-19T01:31:58.766913Z",
+     "shell.execute_reply": "2021-05-19T01:31:58.765913Z",
+     "shell.execute_reply.started": "2021-05-19T01:31:52.916913Z"
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -43,12 +44,13 @@
    "id": "3bf4885f-ee98-4e31-aabc-7a0e12386175",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-05-16T21:53:27.821517Z",
-     "iopub.status.busy": "2021-05-16T21:53:27.821517Z",
-     "iopub.status.idle": "2021-05-16T21:53:27.836517Z",
-     "shell.execute_reply": "2021-05-16T21:53:27.835517Z",
-     "shell.execute_reply.started": "2021-05-16T21:53:27.821517Z"
-    }
+     "iopub.execute_input": "2021-05-19T01:32:00.075913Z",
+     "iopub.status.busy": "2021-05-19T01:32:00.075913Z",
+     "iopub.status.idle": "2021-05-19T01:32:00.099913Z",
+     "shell.execute_reply": "2021-05-19T01:32:00.096913Z",
+     "shell.execute_reply.started": "2021-05-19T01:32:00.075913Z"
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -71,12 +73,13 @@
    "id": "62328afe-5399-4cae-87df-9694c69cf31c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-05-16T21:53:27.838517Z",
-     "iopub.status.busy": "2021-05-16T21:53:27.838517Z",
-     "iopub.status.idle": "2021-05-16T21:53:27.863517Z",
-     "shell.execute_reply": "2021-05-16T21:53:27.862517Z",
-     "shell.execute_reply.started": "2021-05-16T21:53:27.838517Z"
-    }
+     "iopub.execute_input": "2021-05-19T01:32:04.745913Z",
+     "iopub.status.busy": "2021-05-19T01:32:04.745913Z",
+     "iopub.status.idle": "2021-05-19T01:32:04.766913Z",
+     "shell.execute_reply": "2021-05-19T01:32:04.765913Z",
+     "shell.execute_reply.started": "2021-05-19T01:32:04.745913Z"
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -131,12 +134,13 @@
    "id": "4e3404f8-7930-47b9-a4da-8d7a9ba5d075",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-05-16T21:53:27.866517Z",
-     "iopub.status.busy": "2021-05-16T21:53:27.865517Z",
-     "iopub.status.idle": "2021-05-16T21:53:27.873517Z",
-     "shell.execute_reply": "2021-05-16T21:53:27.872517Z",
-     "shell.execute_reply.started": "2021-05-16T21:53:27.866517Z"
-    }
+     "iopub.execute_input": "2021-05-19T01:32:06.768913Z",
+     "iopub.status.busy": "2021-05-19T01:32:06.767913Z",
+     "iopub.status.idle": "2021-05-19T01:32:06.772913Z",
+     "shell.execute_reply": "2021-05-19T01:32:06.772913Z",
+     "shell.execute_reply.started": "2021-05-19T01:32:06.768913Z"
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -154,12 +158,13 @@
    "id": "68f321c3-9fd3-4c3e-b7e7-a7242194f145",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-05-16T21:53:27.875517Z",
-     "iopub.status.busy": "2021-05-16T21:53:27.874517Z",
-     "iopub.status.idle": "2021-05-16T21:53:28.045517Z",
-     "shell.execute_reply": "2021-05-16T21:53:28.044517Z",
-     "shell.execute_reply.started": "2021-05-16T21:53:27.875517Z"
-    }
+     "iopub.execute_input": "2021-05-19T01:32:07.200913Z",
+     "iopub.status.busy": "2021-05-19T01:32:07.200913Z",
+     "iopub.status.idle": "2021-05-19T01:32:07.439913Z",
+     "shell.execute_reply": "2021-05-19T01:32:07.439913Z",
+     "shell.execute_reply.started": "2021-05-19T01:32:07.200913Z"
+    },
+    "tags": []
    },
    "outputs": [
     {
@@ -185,12 +190,13 @@
    "id": "26f984c6-8ec3-4c4b-a1c3-bfc42b981a4a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-05-16T21:53:28.047517Z",
-     "iopub.status.busy": "2021-05-16T21:53:28.046517Z",
-     "iopub.status.idle": "2021-05-16T21:53:28.197517Z",
-     "shell.execute_reply": "2021-05-16T21:53:28.196517Z",
-     "shell.execute_reply.started": "2021-05-16T21:53:28.047517Z"
-    }
+     "iopub.execute_input": "2021-05-19T01:32:07.511913Z",
+     "iopub.status.busy": "2021-05-19T01:32:07.511913Z",
+     "iopub.status.idle": "2021-05-19T01:32:07.683913Z",
+     "shell.execute_reply": "2021-05-19T01:32:07.683913Z",
+     "shell.execute_reply.started": "2021-05-19T01:32:07.511913Z"
+    },
+    "tags": []
    },
    "outputs": [
     {
@@ -208,6 +214,98 @@
    ],
    "source": [
     "grafico_comparativo([\"Milk skim\", \"Fortified milk\", \"Ice cream\"], \"Protein\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "d70d0f74-d4fc-42bc-9563-447d7c9a4047",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-05-19T01:58:13.646913Z",
+     "iopub.status.busy": "2021-05-19T01:58:13.646913Z",
+     "iopub.status.idle": "2021-05-19T01:58:14.715913Z",
+     "shell.execute_reply": "2021-05-19T01:58:14.715913Z",
+     "shell.execute_reply.started": "2021-05-19T01:58:13.646913Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import streamlit as st\n",
+    "st.selectbox(\"Escolha entre proteína e carboidrato\",\n",
+    "            prot_carb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "1581b182-2454-4c15-ad7e-1d2367ec0a1e",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-05-19T02:02:53.760913Z",
+     "iopub.status.busy": "2021-05-19T02:02:53.760913Z",
+     "iopub.status.idle": "2021-05-19T02:02:53.765913Z",
+     "shell.execute_reply": "2021-05-19T02:02:53.765913Z",
+     "shell.execute_reply.started": "2021-05-19T02:02:53.760913Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Calories', 'Protein', 'Fat', 'Sat.Fat', 'Fiber', 'Carbs'], dtype='object')"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dados_nutricao.columns[2:-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "c11dafe8-0fbb-44c3-8853-3661a0d20db2",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-05-19T02:02:47.440913Z",
+     "iopub.status.busy": "2021-05-19T02:02:47.440913Z",
+     "iopub.status.idle": "2021-05-19T02:02:47.445913Z",
+     "shell.execute_reply": "2021-05-19T02:02:47.444913Z",
+     "shell.execute_reply.started": "2021-05-19T02:02:47.440913Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Food', 'Grams', 'Calories', 'Protein', 'Fat', 'Sat.Fat', 'Fiber',\n",
+       "       'Carbs', 'Category'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dados_nutricao.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aba6350c-302b-40e7-9484-0f6e76423e3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.append()"
    ]
   }
  ],
