atualização da base e do app

--- a/web_app_CSA_pindorama.ipynb
+++ b/web_app_CSA_pindorama.ipynb
@@ -10,15 +10,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "ee8631c5-64e7-4c9d-bc48-22fb8cf378a1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-05-26T10:34:15.014000Z",
-     "iopub.status.busy": "2021-05-26T10:34:15.014000Z",
-     "iopub.status.idle": "2021-05-26T10:34:22.485000Z",
-     "shell.execute_reply": "2021-05-26T10:34:22.484000Z",
-     "shell.execute_reply.started": "2021-05-26T10:34:15.014000Z"
+     "iopub.execute_input": "2021-05-28T15:10:19.763000Z",
+     "iopub.status.busy": "2021-05-28T15:10:19.763000Z",
+     "iopub.status.idle": "2021-05-28T15:10:22.806000Z",
+     "shell.execute_reply": "2021-05-28T15:10:22.806000Z",
+     "shell.execute_reply.started": "2021-05-28T15:10:19.763000Z"
     },
     "tags": []
    },
@@ -40,15 +40,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "3bf4885f-ee98-4e31-aabc-7a0e12386175",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-05-26T10:40:31.919000Z",
-     "iopub.status.busy": "2021-05-26T10:40:31.919000Z",
-     "iopub.status.idle": "2021-05-26T10:40:31.956000Z",
-     "shell.execute_reply": "2021-05-26T10:40:31.956000Z",
-     "shell.execute_reply.started": "2021-05-26T10:40:31.919000Z"
+     "iopub.execute_input": "2021-05-28T15:10:22.808000Z",
+     "iopub.status.busy": "2021-05-28T15:10:22.808000Z",
+     "iopub.status.idle": "2021-05-28T15:10:22.883000Z",
+     "shell.execute_reply": "2021-05-28T15:10:22.882000Z",
+     "shell.execute_reply.started": "2021-05-28T15:10:22.808000Z"
     },
     "tags": []
    },
@@ -279,7 +279,7 @@
        "20   240.0      50.0       2.0    1.0          9.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,19 +295,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 8,
    "id": "9f38a6ed-5a97-41fa-a1d1-deed2a0a1e85",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-05-26T22:56:26.590000Z",
-     "iopub.status.busy": "2021-05-26T22:56:26.589000Z",
-     "iopub.status.idle": "2021-05-26T22:56:26.634000Z",
-     "shell.execute_reply": "2021-05-26T22:56:26.634000Z",
-     "shell.execute_reply.started": "2021-05-26T22:56:26.590000Z"
+     "iopub.execute_input": "2021-05-28T15:16:58.212000Z",
+     "iopub.status.busy": "2021-05-28T15:16:58.212000Z",
+     "iopub.status.idle": "2021-05-28T15:16:58.250000Z",
+     "shell.execute_reply": "2021-05-28T15:16:58.248000Z",
+     "shell.execute_reply.started": "2021-05-28T15:16:58.212000Z"
     },
     "tags": []
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['Unnamed: 0', 'carro_1', 'carro_2'], dtype='object')\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -329,8 +336,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>29/mai</th>\n",
-       "      <th>06/jun</th>\n",
+       "      <th>carro_1</th>\n",
+       "      <th>carro_2</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Unnamed: 0</th>\n",
@@ -340,13 +347,28 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>carro 1</th>\n",
-       "      <td>Ana Beatriz</td>\n",
+       "      <th>29/mai</th>\n",
+       "      <td>Débora/Humberto</td>\n",
+       "      <td>-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>05/jun</th>\n",
+       "      <td>Bernadete</td>\n",
        "      <td>???</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>carro 2</th>\n",
-       "      <td>Débora/Humberto</td>\n",
+       "      <th>12/jun</th>\n",
+       "      <td>???</td>\n",
+       "      <td>???</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19/jun</th>\n",
+       "      <td>???</td>\n",
+       "      <td>???</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26/jun</th>\n",
+       "      <td>???</td>\n",
        "      <td>???</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -354,13 +376,16 @@
        "</div>"
       ],
       "text/plain": [
-       "                     29/mai 06/jun\n",
-       "Unnamed: 0                        \n",
-       "carro 1         Ana Beatriz    ???\n",
-       "carro 2     Débora/Humberto    ???"
+       "                    carro_1 carro_2\n",
+       "Unnamed: 0                         \n",
+       "29/mai      Débora/Humberto       -\n",
+       "05/jun            Bernadete     ???\n",
+       "12/jun                  ???     ???\n",
+       "19/jun                  ???     ???\n",
+       "26/jun                  ???     ???"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,6 +396,7 @@
     "def carrega_dados(caminho, aba, ignora_primeira_linha_coluna = False):\n",
     "    if ignora_primeira_linha_coluna == True:\n",
     "        dados_nutricao = pd.read_excel(caminho, sheet_name = aba, skiprows = [0])\n",
+    "        print(dados_nutricao.columns)\n",
     "        dados_nutricao = dados_nutricao.set_index(\"Unnamed: 0\")\n",
     "    else:\n",
     "        dados_nutricao = pd.read_excel(caminho, sheet_name = aba)\n",
