atualização da base e do app

--- a/web_app_CSA_pindorama.ipynb
+++ b/web_app_CSA_pindorama.ipynb
@@ -10,15 +10,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "ee8631c5-64e7-4c9d-bc48-22fb8cf378a1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-05-28T15:10:19.763000Z",
-     "iopub.status.busy": "2021-05-28T15:10:19.763000Z",
-     "iopub.status.idle": "2021-05-28T15:10:22.806000Z",
-     "shell.execute_reply": "2021-05-28T15:10:22.806000Z",
-     "shell.execute_reply.started": "2021-05-28T15:10:19.763000Z"
+     "iopub.execute_input": "2021-05-31T13:01:13.567400Z",
+     "iopub.status.busy": "2021-05-31T13:01:13.567400Z",
+     "iopub.status.idle": "2021-05-31T13:01:13.570400Z",
+     "shell.execute_reply": "2021-05-31T13:01:13.570400Z",
+     "shell.execute_reply.started": "2021-05-31T13:01:13.567400Z"
     },
     "tags": []
    },
@@ -40,15 +40,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "3bf4885f-ee98-4e31-aabc-7a0e12386175",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-05-28T15:10:22.808000Z",
-     "iopub.status.busy": "2021-05-28T15:10:22.808000Z",
-     "iopub.status.idle": "2021-05-28T15:10:22.883000Z",
-     "shell.execute_reply": "2021-05-28T15:10:22.882000Z",
-     "shell.execute_reply.started": "2021-05-28T15:10:22.808000Z"
+     "iopub.execute_input": "2021-05-31T13:01:14.414400Z",
+     "iopub.status.busy": "2021-05-31T13:01:14.414400Z",
+     "iopub.status.idle": "2021-05-31T13:01:14.446400Z",
+     "shell.execute_reply": "2021-05-31T13:01:14.446400Z",
+     "shell.execute_reply.started": "2021-05-31T13:01:14.414400Z"
     },
     "tags": []
    },
@@ -279,7 +279,7 @@
        "20   240.0      50.0       2.0    1.0          9.0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,15 +295,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "9f38a6ed-5a97-41fa-a1d1-deed2a0a1e85",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-05-28T15:16:58.212000Z",
-     "iopub.status.busy": "2021-05-28T15:16:58.212000Z",
-     "iopub.status.idle": "2021-05-28T15:16:58.250000Z",
-     "shell.execute_reply": "2021-05-28T15:16:58.248000Z",
-     "shell.execute_reply.started": "2021-05-28T15:16:58.212000Z"
+     "iopub.execute_input": "2021-05-31T13:01:48.820400Z",
+     "iopub.status.busy": "2021-05-31T13:01:48.820400Z",
+     "iopub.status.idle": "2021-05-31T13:01:48.861400Z",
+     "shell.execute_reply": "2021-05-31T13:01:48.860400Z",
+     "shell.execute_reply.started": "2021-05-31T13:01:48.820400Z"
     },
     "tags": []
    },
@@ -312,82 +312,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['Unnamed: 0', 'carro_1', 'carro_2'], dtype='object')\n"
+      "Index(['Unnamed: 0', 'carro_1', 'carro_2'], dtype='object')\n",
+      "05/jun\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>carro_1</th>\n",
-       "      <th>carro_2</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>29/mai</th>\n",
-       "      <td>Débora/Humberto</td>\n",
-       "      <td>-</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>05/jun</th>\n",
-       "      <td>Bernadete</td>\n",
-       "      <td>???</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12/jun</th>\n",
-       "      <td>???</td>\n",
-       "      <td>???</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19/jun</th>\n",
-       "      <td>???</td>\n",
-       "      <td>???</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26/jun</th>\n",
-       "      <td>???</td>\n",
-       "      <td>???</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                    carro_1 carro_2\n",
-       "Unnamed: 0                         \n",
-       "29/mai      Débora/Humberto       -\n",
-       "05/jun            Bernadete     ???\n",
-       "12/jun                  ???     ???\n",
-       "19/jun                  ???     ???\n",
-       "26/jun                  ???     ???"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -407,7 +334,7 @@
     "dados_busca_cesta = carrega_dados(caminho_dados_csa, 'busca_cesta', True)\n",
     "#dados_busca_cesta.index = [\"carro_1\", \"carro_2\"]\n",
     "    \n",
-    "dados_busca_cesta"
+    "print(dados_busca_cesta.index[0])"
    ]
   },
   {
