--- a/web_app_CSA_pindorama.ipynb
+++ b/web_app_CSA_pindorama.ipynb
@@ -10,15 +10,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "ee8631c5-64e7-4c9d-bc48-22fb8cf378a1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-05-31T13:01:13.567400Z",
-     "iopub.status.busy": "2021-05-31T13:01:13.567400Z",
-     "iopub.status.idle": "2021-05-31T13:01:13.570400Z",
-     "shell.execute_reply": "2021-05-31T13:01:13.570400Z",
-     "shell.execute_reply.started": "2021-05-31T13:01:13.567400Z"
+     "iopub.execute_input": "2021-06-05T13:33:46.469600Z",
+     "iopub.status.busy": "2021-06-05T13:33:46.469600Z",
+     "iopub.status.idle": "2021-06-05T13:33:57.421600Z",
+     "shell.execute_reply": "2021-06-05T13:33:57.421600Z",
+     "shell.execute_reply.started": "2021-06-05T13:33:46.469600Z"
     },
     "tags": []
    },
@@ -40,281 +40,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "3bf4885f-ee98-4e31-aabc-7a0e12386175",
+   "execution_count": 57,
+   "id": "9f38a6ed-5a97-41fa-a1d1-deed2a0a1e85",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-05-31T13:01:14.414400Z",
-     "iopub.status.busy": "2021-05-31T13:01:14.414400Z",
-     "iopub.status.idle": "2021-05-31T13:01:14.446400Z",
-     "shell.execute_reply": "2021-05-31T13:01:14.446400Z",
-     "shell.execute_reply.started": "2021-05-31T13:01:14.414400Z"
+     "iopub.execute_input": "2021-06-05T14:21:07.971231Z",
+     "iopub.status.busy": "2021-06-05T14:21:07.971231Z",
+     "iopub.status.idle": "2021-06-05T14:21:08.026236Z",
+     "shell.execute_reply": "2021-06-05T14:21:08.025236Z",
+     "shell.execute_reply.started": "2021-06-05T14:21:07.971231Z"
     },
     "tags": []
    },
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Gramas</th>\n",
-       "      <th>Calorias</th>\n",
-       "      <th>Proteína</th>\n",
-       "      <th>Fibra</th>\n",
-       "      <th>Carboidrato</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>100.0</td>\n",
-       "      <td>44.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>10.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>96.0</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>125.0</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.8</td>\n",
-       "      <td>6.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>160.0</td>\n",
-       "      <td>140.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>24.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>50.0</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>100.0</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>6.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>100.0</td>\n",
-       "      <td>43.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>150.0</td>\n",
-       "      <td>45.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1.9</td>\n",
-       "      <td>8.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>130.0</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>12.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>150.0</td>\n",
-       "      <td>45.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>10.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>120.0</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>6.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>100.0</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>4.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>100.0</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0.8</td>\n",
-       "      <td>21.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>50.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>925.0</td>\n",
-       "      <td>120.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3.6</td>\n",
-       "      <td>29.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>110.0</td>\n",
-       "      <td>155.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>36.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>100.0</td>\n",
-       "      <td>66.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>13.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>100.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>110.0</td>\n",
-       "      <td>45.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>8.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>180.0</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>9.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>240.0</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>9.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "    Gramas  Calorias  Proteína  Fibra  Carboidrato\n",
-       "0    100.0      44.0       2.0    2.0         10.0\n",
-       "1     96.0      18.0       1.0    0.5          3.0\n",
-       "2    125.0      25.0       1.0    0.8          6.0\n",
-       "3    160.0     140.0       8.0    3.0         24.0\n",
-       "4     50.0      17.0       1.0    0.3          3.0\n",
-       "5    100.0      27.0       2.0    1.4          6.0\n",
-       "6    100.0      43.0      12.0    0.0          0.8\n",
-       "7    150.0      45.0       5.0    1.9          8.0\n",
-       "8    130.0      60.0       6.0    1.7         12.0\n",
-       "9    150.0      45.0       1.0    0.9         10.0\n",
-       "10   120.0      30.0       3.0    1.0          6.0\n",
-       "11   100.0      20.0       1.0    1.0          4.0\n",
-       "12   100.0      92.0       3.0    0.8         21.0\n",
-       "13    50.0       6.0       0.0    0.2          1.0\n",
-       "14   925.0     120.0       2.0    3.6         29.0\n",
-       "15   110.0     155.0       2.0    1.0         36.0\n",
-       "16   100.0      66.0       3.0    0.1         13.0\n",
-       "17   100.0      14.0       1.0    0.5          2.0\n",
-       "18   110.0      45.0       4.0    0.9          8.0\n",
-       "19   180.0      30.0       2.0    1.0          9.0\n",
-       "20   240.0      50.0       2.0    1.0          9.0"
+       "(0, 3)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "caminho = \"data/informacao_nutricional.xls\"\n",
-    "\n",
-    "dados_nutricao = pd.read_excel(caminho)\n",
-    "dados_nutricao = dados_nutricao.drop(\"Alimento\", axis=1)\n",
-    "dados_nutricao = dados_nutricao.replace('t', 0)\n",
-    "dados_nutricao\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "9f38a6ed-5a97-41fa-a1d1-deed2a0a1e85",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-05-31T13:01:48.820400Z",
-     "iopub.status.busy": "2021-05-31T13:01:48.820400Z",
-     "iopub.status.idle": "2021-05-31T13:01:48.861400Z",
-     "shell.execute_reply": "2021-05-31T13:01:48.860400Z",
-     "shell.execute_reply.started": "2021-05-31T13:01:48.820400Z"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['Unnamed: 0', 'carro_1', 'carro_2'], dtype='object')\n",
-      "05/jun\n"
-     ]
     }
    ],
    "source": [
@@ -322,19 +69,23 @@
     "\n",
     "def carrega_dados(caminho, aba, ignora_primeira_linha_coluna = False):\n",
     "    if ignora_primeira_linha_coluna == True:\n",
-    "        dados_nutricao = pd.read_excel(caminho, sheet_name = aba, skiprows = [0])\n",
-    "        print(dados_nutricao.columns)\n",
-    "        dados_nutricao = dados_nutricao.set_index(\"Unnamed: 0\")\n",
+    "        dados = pd.read_excel(caminho, sheet_name = aba, skiprows = [0])\n",
+    "        if dados.shape[0] != 0:\n",
+    "            dic_mes = {'1': 'jan', '2': 'fev', '3': 'mar', '4': 'abr', '5': 'may','6': 'jun',\n",
+    "                   '7': 'jul', '8': 'ago', '9': 'set', '10': 'out', '11': 'nov', '12': 'dez'}\n",
+    "            dia = dados[\"Unnamed: 0\"].dt.day\n",
+    "            mes = dados[\"Unnamed: 0\"].dt.month\n",
+    "            dados[\"Unnamed: 0\"] = dados[\"Unnamed: 0\"].dt.day.map(str) + \"/\" + dados[\"Unnamed: 0\"].dt.month.map(str).apply(lambda x: dic_mes[x])\n",
+    "            dados = dados.set_index(\"Unnamed: 0\")                \n",
     "    else:\n",
-    "        dados_nutricao = pd.read_excel(caminho, sheet_name = aba)\n",
+    "        dados = pd.read_excel(caminho, sheet_name = aba)\n",
     "        \n",
-    "    return dados_nutricao\n",
+    "    return dados\n",
     "\n",
     "\n",
-    "dados_busca_cesta = carrega_dados(caminho_dados_csa, 'busca_cesta', True)\n",
-    "#dados_busca_cesta.index = [\"carro_1\", \"carro_2\"]\n",
+    "dados_busca_cesta = carrega_dados(caminho_dados_csa, 'mutiroes', True)\n",
     "    \n",
-    "print(dados_busca_cesta.index[0])"
+    "dados_busca_cesta.shape"
    ]
   },
   {
